# Freya

./: .gitignore  CMakeLists.txt  Freya.glade  FreyaDoxygen.conf  Logo.blend  MPDConnection.cpp  MPDConnection.hpp  PENDING  PollingThread.cpp  PollingThread.hpp  README  README.textile  config.h.in  config.xml  gtk.suppression  kittycat  license.rb  main.cpp  test.cc  test.file
AvahiBrowser/: AvahiHandler.cc  AvahiHandler.hh  AvahiView.cc  AvahiView.hh  CMakeLists.txt  main.cc
Eddys-Mockup/: Mockup_eddy  Mockup_eddy.cc  Mockup_eddy.glade
catCode/: CMakeLists.txt  ConfigHandler.cc  ConfigHandler.hh  ConfigModel.cc  ConfigModel.hh  MPDConfigHandler.cc  MPDConfigHandler.hh  MPDConfigModel.cc  MPDConfigModel.hh  config.xml  test_config.cc
config/: config.xml
data/: CMakeLists.txt  README.textile  freya.desktop
documentation/: Einleitung.tex  MPD_Freya_Dokumentation.aux  MPD_Freya_Dokumentation.tex
src/: AbstractBrowser.hh  AbstractClientUser.hh  AbstractFilebrowser.hh  AbstractItemlist.hh  AbstractSonglist.hh  CMakeLists.txt  Cmdparser.cc  FreyaWindow.cc  FreyaWindow.hh  IdleListener.cc  IdleListener.hpp  MPDClient.cc  MPDClient.hpp  MPDClientHandler.cc  MPDClientHandler.hpp  MPDConnection.cc  MPDConnection.hpp  MPDConnectionHandler.cc  MPDConnectionHandler.hpp  Main.cc  MainWindow.cc  Makefile  PlaylistTreeView.cc  PlaylistTreeView.hh  Singleton.hh  cmake_install.cmake  doxygen_namespace.hh  includes.hh  includes.hpp  main.cc  mpd_shell.cc  ui_includes.hh
src/Avahi/: Browser.cc  Browser.hh  CMakeLists.txt  View.cc  View.hh  test_avahi.cc
src/AvahiBrowser/: AvahiHandler.cc  Browser.hh  CMakeCache.txt  CMakeLists.txt  View.cc  View.hh
src/Browser/: AbstractBrowser.hh  BasePopup.cc  BasePopup.hh  CMakeLists.txt  Database.cc  Database.hh  DatabaseCache.cc  DatabaseCache.hh  DatabasePopup.cc  DatabasePopup.hh  Fortuna.cc  Fortuna.hh  OutputsModelColumns.hh  PlaylistAddDialog.cc  PlaylistAddDialog.hh  PlaylistManager.cc  PlaylistManager.hh  PlaylistManagerPopup.cc  PlaylistManagerPopup.hh  PlaylistTreeView.cc  PlaylistTreeView.hh  Queue.cc  Queue.hh  QueueMerger.cc  QueueMerger.hh  QueueModelColumns.cc  QueueModelColumns.hh  QueuePopup.cc  QueuePopup.hh  Settings.cc  Settings.hh  SettingsGeneral.cc  SettingsGeneral.hh  SettingsNetwork.cc  SettingsNetwork.hh  SettingsOutputs.cc  SettingsOutputs.hh  SettingsPlayback.cc  SettingsPlayback.hh  SettingsPlugins.cc  (+4 more)
src/Browser/Avahi/: CMakeLists.txt  ServerList.cc  ServerList.hh
src/Browser/Database/: CMakeLists.txt  Database.cc  Database.hh  DatabaseCache.cc  DatabaseCache.hh  DatabasePopup.cc  DatabasePopup.hh
src/Browser/Fortuna/: CMakeLists.txt  Fortuna.cc  Fortuna.hh
src/Browser/NowPlaying/: ArtistPhotosMgr.cc  ArtistPhotosMgr.hh  CMakeLists.txt  CoverArtMgr.cc  CoverArtMgr.hh  EventImage.cc  EventImage.hh  HoverImage.cc  HoverImage.hh  ImageWall.cc  ImageWall.hh  NowPlaying.cc  NowPlaying.hh  OtherAlbumsMgr.cc  OtherAlbumsMgr.hh  RelatedLinksMgr.cc  RelatedLinksMgr.hh  TextItemsMgr.cc  TextItemsMgr.hh  TextPageMgr.cc  TextPageMgr.hh  TextView.cc  TextView.hh  TracklistMgr.cc  TracklistMgr.hh  UpdateInterface.hh
src/Browser/PlaylistManager/: CMakeLists.txt  PlaylistManager.cc  PlaylistManager.hh  PlaylistManagerPopup.cc  PlaylistManagerPopup.hh
src/Browser/Queue/: CMakeLists.txt  PlaylistAddDialog.cc  PlaylistAddDialog.hh  Queue.cc  Queue.hh  QueueMerger.cc  QueueMerger.hh  QueueModelColumns.cc  QueueModelColumns.hh  QueuePopup.cc  QueuePopup.hh
src/Browser/Settings/: AbstractSettings.hh  CMakeLists.txt  OutputsModelColumns.hh  Settings.cc  Settings.hh  SettingsGeneral.cc  SettingsGeneral.hh  SettingsNetwork.cc  SettingsNetwork.hh  SettingsOutputs.cc  SettingsOutputs.hh  SettingsPlayback.cc  SettingsPlayback.hh
src/Browser/Statistics/: CMakeLists.txt  StatBrowser.cc  StatBrowser.hh
src/Config/: CMakeLists.txt  ConfigHandler.cc  ConfigHandler.hh  ConfigModel.cc  ConfigModel.hh  Handler.cc  Handler.hh  Model.cc  Model.hh  defaultcfg.inl  init.cc  init.hh  test_config.cc
src/GManager/: AbstractGElement.hh  BrowserList.cc  BrowserList.hh  CMakeLists.txt  CairoSlider.cc  CairoSlider.hh  ClientTimerProxy.cc  ClientTimerProxy.hh  DisconnectManager.cc  DisconnectManager.hh  Heartbeat.cc  Heartbeat.hh  MenuList.cc  MenuList.hh  NotifyManager.cc  NotifyManager.hh  PlaybackButtons.cc  PlaybackButtons.hh  PlaylistTreeView.cc  PlaylistTreeView.hh  Settings.cc  Settings.hh  SettingsGeneral.hh  SettingsNetwork.cc  SettingsNetwork.hh  SettingsPlugins.hh  SettingsReplay.hh  SettingsSub.hh  StatusIcons.cc  StatusIcons.hh  Statusbar.cc  Statusbar.hh  Timeslide.cc  Timeslide.hh  TitleLabel.cc  TitleLabel.hh  Trayicon.cc  Trayicon.hh  VolumeSlider.cc  VolumeSlider.hh  (+4 more)
src/Glyr/: CMakeLists.txt  Request.cc  Request.hh  UpdateInterface.hh  test.c  test_glyr.cc
src/Init/: CMakeLists.txt  CssLoader.cc  CssLoader.hh  Initpath.cc  Initpath.hh  Main.cc  Path.cc  Path.hh  SignalHandler.cc  SignalHandler.hh  cmdoptions.cc  cmdoptions.hh  defaultcss.inl  test_path.cc
src/Log/: CMakeLists.txt  Writer.cc  Writer.hh  check_log.hh  test_log.cc
src/LogHandler/: CMakeLists.txt  LogHandler.cc  LogHandler.hh  Singleton.hh  test_log.cc
src/MPD/: AbstractClientExtension.hh  AbstractClientUser.hh  AbstractComposite.hh  AbstractFileGenerator.hh  AbstractFilebrowser.hh  AbstractItemGenerator.hh  AbstractItemlist.hh  AudioOutput.cc  AudioOutput.hh  BaseClient.cc  BaseClient.hh  CMakeLists.txt  Client.cc  Client.hh  Connection.cc  Connection.hh  Directory.cc  Directory.hh  IdleListener.cc  IdleListener.hh  Listener.cc  Listener.hh  MPDClientHandler.cc  MPDClientHandler.hh  MPDConnection.cc  MPDConnection.hh  MPDConnectionHandler.cc  MPDConnectionHandler.hh  NotifyData.cc  NotifyData.hh  Playlist.cc  Playlist.hh  Query.cc  Query.hh  Song.cc  Song.hh  Statistics.cc  Statistics.hh  Status.cc  Status.hh  (+3 more)
src/Notify/: CMakeLists.txt  Notify.cc  Notify.hh  check_notify.hh
src/Utils/: CMakeLists.txt  CompileSymbols.cc  CompileSymbols.hh  Singleton.hh  UseMemPool.hh  Utils.cc  Utils.hh  a.out  check_utils.hh  test_mempool.cc  test_utils.cc
(+2755 files in other folders)
