PKG_CHECK_MODULES(GTKMM3_PACKAGE gtkmm-3.0 REQUIRED)
PKG_CHECK_MODULES(AVAHI_PACKAGE  avahi-client avahi-glib REQUIRED)
INCLUDE_DIRECTORIES(${GTKMM3_PACKAGE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${AVAHI_PACKAGE_INCLUDE_DIRS})

ADD_EXECUTABLE(avahi_browser AvahiHandler.cc AvahiView.cc main.cc)
TARGET_LINK_LIBRARIES(avahi_browser ${GTKMM3_PACKAGE_LIBRARIES} ${AVAHI_PACKAGE_LIBRARIES})
