ADD_SUBDIRECTORY(Avahi)
ADD_SUBDIRECTORY(Config)
ADD_SUBDIRECTORY(Log)
ADD_SUBDIRECTORY(MPD)
ADD_SUBDIRECTORY(GManager)
ADD_SUBDIRECTORY(Init)
ADD_SUBDIRECTORY(Browser)
ADD_SUBDIRECTORY(Utils)
ADD_SUBDIRECTORY(Notify)
ADD_SUBDIRECTORY(Glyr)


ADD_EXECUTABLE(Freya Init/Main.cc)
TARGET_LINK_LIBRARIES(Freya FreyaGManagerLib FreyaBrowserLib)
INSTALL(TARGETS Freya RUNTIME DESTINATION ${INSTALL_BIN_DIR})
