if(USE_GLYR)
    ADD_LIBRARY(FreyaGlyrLib STATIC Request.cc)
    TARGET_LINK_LIBRARIES(FreyaGlyrLib FreyaMPDLib ${LIBGLYR_PACKAGE_LIBRARIES} ${GTKMM3_PACKAGE_LIBRARIES})

    #ADD_EXECUTABLE(test_glyr test_glyr.cc)
    #    TARGET_LINK_LIBRARIES(test_glyr FreyaGlyrLib ${LIBGLYR_PACKAGE_LIBRARIES} ${GLIBMM_LIBRARIES})
endif(USE_GLYR)
